--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 }
 
 #app {
+  display: flex;
+  flex-direction: column;
   font-size: 5em;
   text-align: center;
   height: 100vh;
@@ -15,12 +17,20 @@
 }
 
 #middle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
   height: 60vh;
   width: 100vw;
 }
 
 #main {
   width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
 }
 
 #nav {
